[gd_scene load_steps=7 format=3 uid="uid://d324rwh5voqes"]

[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_qa6b6"]
[ext_resource type="PackedScene" uid="uid://cew84f5dda8rp" path="res://scenes/board/board.tscn" id="2_xren7"]
[ext_resource type="PackedScene" uid="uid://4t6xodde48gh" path="res://scenes/game_over_menu/game_over_menu.tscn" id="3_4766v"]
[ext_resource type="PackedScene" uid="uid://dgh24soxvixsy" path="res://scenes/hud/hud.tscn" id="4_2n62d"]
[ext_resource type="PackedScene" uid="uid://c5oieo75w76ac" path="res://scenes/main_menu/main_menu.tscn" id="4_qgiqe"]
[ext_resource type="PackedScene" uid="uid://dyxitjmkr2gmx" path="res://scenes/in_game_menu/in_game_menu.tscn" id="6_4lqr0"]

[node name="Main" type="Node"]
script = ExtResource("1_qa6b6")
to_win_total = 2

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.540435, 0.754487, 0.938484, 1)

[node name="Board" parent="." instance=ExtResource("2_xren7")]
position = Vector2(240, 296)

[node name="HUD" parent="." instance=ExtResource("4_2n62d")]

[node name="MainMenu" parent="." instance=ExtResource("4_qgiqe")]
visible = false

[node name="GameOverMenu" parent="." instance=ExtResource("3_4766v")]
visible = false

[node name="InGameMenu" parent="." instance=ExtResource("6_4lqr0")]

[connection signal="winner" from="Board" to="." method="_on_board_winner"]
[connection signal="show_in_game_menu" from="HUD" to="." method="_on_hud_show_in_game_menu"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
[connection signal="show_main_menu" from="GameOverMenu" to="." method="_on_game_over_menu_show_main_menu"]
[connection signal="continue_game" from="InGameMenu" to="." method="_on_in_game_menu_continue_game"]
[connection signal="quit_game" from="InGameMenu" to="." method="_on_in_game_menu_quit_game"]
